<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Purple"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tts" >
    </TextView>

    <EditText
        android:id="@+id/text_ttsSource"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:minLines="4"
        android:text="This is a test. This is only a test." >
    </EditText>

    <Spinner
        android:id="@+id/spin_ttsVoice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/arr_ttsVoices" >
    </Spinner>

    <Button
        android:id="@+id/btn_startTts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_startTts" >
    </Button>

    <Button
        android:id="@+id/btn_stopTts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_stop" >
    </Button>

    <TextView
        android:id="@+id/text_currentTts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TextView>

</LinearLayout>